--- a/albumosis2022.html
+++ b/albumosis2022.html
@@ -81,13 +81,13 @@
     <div class="container">
       <div class="block-heading">
         <h2>Album Kegiatan Osis</h2>
-        <p>#threeforall</p>
+        <p>PELANTIKAN DAN STJ LPJ PENGURUS OSIS </p>
       </div>
       <div class="portfolio-wrapper clearfix">
-        <a class="each-portfolio" data-fancybox="gallery" href="images/osis1 (1).jpg">
+        <a class="each-portfolio" data-fancybox="gallery" href="images/kontenalbum/osis1 (1).jpg">
           <div class="content hover-cont-wrap">
             <div class="content-overlay"></div>
-            <img class="content-image" src="images/osis1 (1).jpg">
+            <img class="content-image" src="images/kontenalbum/osis1 (1).jpg">
             <div class="content-details fadeIn-bottom">
               <h5 class="p-title">PELANTIKAN MPK-OSIS 2021-2022</h5>
               <p class="p-desc">KETUA-WAKIL 1-WAKIL 2</p>
@@ -95,10 +95,10 @@
             </div>
           </div>
         </a>
-        <a class="each-portfolio" data-fancybox="gallery" href="images/osis1 (2).jpg">
+        <a class="each-portfolio" data-fancybox="gallery" href="images/kontenalbum/osis1 (2).jpg">
           <div class="content hover-cont-wrap">
             <div class="content-overlay"></div>
-            <img class="content-image" src="images/osis1 (2).jpg">
+            <img class="content-image" src="images/kontenalbum/osis1 (2).jpg">
             <div class="content-details fadeIn-bottom">
               <h5 class="p-title">PELANTIKAN MPK-OSIS 2021-2022</h5>
               <p class="p-desc">PELANTIKAN PERESMIAN PENGURUS MPK-OSIS 2021-2022</p>
@@ -106,10 +106,10 @@
             </div>
           </div>
         </a>
-        <a class="each-portfolio" data-fancybox="gallery" href="images/osis1 (3).jpg">
+        <a class="each-portfolio" data-fancybox="gallery" href="images/kontenalbum/osis1 (3).jpg">
           <div class="content hover-cont-wrap">
             <div class="content-overlay"></div>
-            <img class="content-image" src="images/osis1 (3).jpg">
+            <img class="content-image" src="images/kontenalbum/osis1 (3).jpg">
             <div class="content-details fadeIn-bottom">
               <h5 class="p-title">PELANTIKAN MPK-OSIS 2021-2022</h5>
               <p class="p-desc">FOTO PENGURUS OSIS PERIODE 2021-2022</p>
@@ -118,10 +118,10 @@
           </div>
         </a>
 
-        <a class="each-portfolio" data-fancybox="gallery" href="images/osis1 (4).JPG">
+        <a class="each-portfolio" data-fancybox="gallery" href="images/kontenalbum/osis1 (4).JPG">
           <div class="content hover-cont-wrap">
             <div class="content-overlay"></div>
-            <img class="content-image" src="images/osis1 (4).JPG">
+            <img class="content-image" src="images/kontenalbum/osis1 (4).JPG">
             <div class="content-details fadeIn-bottom">
               <h5 class="p-title">STJ-LPJ OSIS 2020-2021</h5>
               <p class="p-desc">STJ-LPJ PENGURUS OSIS PERIODE 2022-2021</p>
@@ -130,10 +130,10 @@
           </div>
         </a>
 
-        <a class="each-portfolio" data-fancybox="gallery" href="images/osis1 (5).JPG">
+        <a class="each-portfolio" data-fancybox="gallery" href="images/kontenalbum/osis1 (5).JPG">
           <div class="content hover-cont-wrap">
             <div class="content-overlay"></div>
-            <img class="content-image" src="images/osis1 (5).JPG">
+            <img class="content-image" src="images/kontenalbum/osis1 (5).JPG">
             <div class="content-details fadeIn-bottom">
               <h5 class="p-title">STJ-LPJ OSIS 2020-2021</h5>
               <p class="p-desc">STJ-LPJ PENGURUS OSIS PERIODE 2022-2021</p>
@@ -142,10 +142,10 @@
           </div>
         </a>
 
-        <a class="each-portfolio" data-fancybox="gallery" href="images/osis1 (6).JPG">
+        <a class="each-portfolio" data-fancybox="gallery" href="images/kontenalbum/osis1 (6).JPG">
           <div class="content hover-cont-wrap">
             <div class="content-overlay"></div>
-            <img class="content-image" src="images/osis1 (6).JPG">
+            <img class="content-image" src="images/kontenalbum/osis1 (6).JPG">
             <div class="content-details fadeIn-bottom">
               <h5 class="p-title">STJ-LPJ OSIS 2020-2021</h5>
               <p class="p-desc">STJ-LPJ PENGURUS OSIS PERIODE 2022-2021</p>
@@ -192,17 +192,14 @@
     <div class="container">
       <ul class="list-inline">
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="javascript:void(0)">
+          <a class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/p/CcswYelpRCd/?utm_source=ig_web_copy_link">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
         </li>
+      
+      
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="javascript:void(0)">
-              <i class="fa fa-youtube" aria-hidden="true"></i>
-            </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white" href="javascript:void(0)">
+          <a class="social-link rounded-circle text-white" href="https://api.whatsapp.com/send?phone=62888901780511">
               <i class="fa fa-whatsapp" aria-hidden="true"></i>
             </a>
         </li>
